@@ -1,7 +1,8 @@
 2008-03-02  Miguel Sofer  <msofer@users.sf.net>
 
-	* generic/tclNamesp.c (GetNamespaceFromObj): spoil the intrep of
-	an nsNameType obj when the reference crosses interpreter
+	* generic/tclNamesp.c (GetNamespaceFromObj): 
+	* tests/interp.test (interp-28.2): spoil the intrep of an
+	nsNameType obj when the reference crosses interpreter 
 	boundaries. 
 
 2008-02-29  Don Porter	<dgp@users.sourceforge.net>
